--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.3.3'
     implementation 'androidx.navigation:navigation-ui-ktx:2.3.3'
+    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
     implementation 'io.github.microutils:kotlin-logging-jvm:2.0.4'
     implementation 'org.slf4j:slf4j-simple:1.7.29'
     testImplementation 'junit:junit:4.12'
