--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,8 +11,8 @@ android {
         applicationId "ru.egoncharovsky.words"
         minSdkVersion 28
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 2
+        versionName "1.0-prealpha"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
