--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,13 @@ apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
 android {
-    compileSdkVersion 31
+    namespace "ru.egoncharovsky.words"
+    compileSdk 34
 
     defaultConfig {
         applicationId "ru.egoncharovsky.words"
         minSdkVersion 28
-        targetSdkVersion 31
+        targetSdkVersion 34
         versionCode 9
         versionName "1.0-prealpha"
 
@@ -55,11 +56,11 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-common:$kotlinVersion"
 
-    implementation "androidx.core:core-ktx:1.7.0"
-    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'com.google.android.material:material:1.12.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.2.0'
 
 //    implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.5.4'
 
@@ -69,7 +70,7 @@ dependencies {
     implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
 
     implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0-alpha01'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
 
     implementation 'io.github.microutils:kotlin-logging-jvm:2.1.21'
     implementation 'org.slf4j:slf4j-simple:1.7.32'
@@ -89,6 +90,6 @@ dependencies {
     testImplementation 'org.mockito.kotlin:mockito-kotlin:4.0.0'
     testImplementation "org.jetbrains.kotlin:kotlin-test-junit:$kotlinVersion"
     testImplementation 'org.junit.jupiter:junit-jupiter:5.8.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
 }
