--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,18 @@
 buildscript {
 
     ext {
-        gradleVersion = '7.0.4'
-        kotlinVersion = '1.6.10'
+        gradleVersion = '8.5.0'
+        kotlinVersion = '2.0.0'
 
-        roomVersion = '2.4.1'
-        hiltVersion = '2.40.5'
-        lifecycleVersion = '2.4.0'
-        navigationVersion = '2.3.5'
+        roomVersion = '2.6.1'
+        hiltVersion = '2.51.1'
+        lifecycleVersion = '2.8.7'
+        navigationVersion = '2.8.3'
     }
 
     repositories {
         google()
-        jcenter()
+        mavenCentral()
     }
 
     dependencies {
